--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -106,11 +106,11 @@
                 </div>
             </li>
             <li id="account-dropdown" class="ui">
-                <a href="#" class="opts_account">
+                <a  class="opts_account">
                     <img src="assets/images/hd_dp.jpg" alt="">
                 </a>
                 <div class="menu drop-menu">
-                    <div class="channel_my">
+                    <!-- <div class="channel_my">
                         <div class="profile_link">
                             <img src="assets/images/hd_dp.jpg" alt="">
                             <div class="pd_content">
@@ -124,18 +124,18 @@
                             </div>
                         </div>
                         <a href="my_instructor_profile_view.html" class="dp_link_12">View Instructor Profile</a>
-                    </div>
-                    <div class="night_mode_switch__btn">
+                    </div> -->
+                    <!-- <div class="night_mode_switch__btn">
                         <a href="#" id="night-mode" class="btn-night-mode">
                             <i class="uil uil-moon"></i> Night mode
                             <span class="btn-night-mode-switch">
                                 <span class="uk-switch-button"></span>
                             </span>
                         </a>
-                    </div>
-                    <a href="help.html" class="item channel_item">Help</a>
-                    <a href="feedback.html" class="item channel_item">Send Feedback</a>
-                    <a href="sign_in.html" class="item channel_item">Sign Out</a>
+                    </div> -->
+                    <!-- <a href="help.html" class="item channel_item">Help</a>
+                    <a href="feedback.html" class="item channel_item">Send Feedback</a> -->
+                    <a (click)="logOut()" class="item channel_item">Sign Out</a>
                 </div>
             </li>
         </ul>
