--- a/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
+++ b/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
@@ -83,7 +83,7 @@
                                         <div class="col-lg-4 col-md-12">
                                             <button (click)="onSaveChapterClick()" class="part_btn_save prt-sv">Save
                                                 Chapter</button>
-                                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                            <button (click)="getChaptersByInstructor()" class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                                 data-target="#chapter" aria-expanded="false" aria-controls="chapter">
                                                 View Saved Chapters
                                             </button>
@@ -99,21 +99,21 @@
                                                                     <th class="text-center" scope="col">Chapters
                                                                     </th>
                                                                     <th class="cell-ta">Title</th>
-                                                                    <th class="text-center" scope="col">videos
-                                                                    </th>
-                                                                    <th class="text-center" scope="col">File
-                                                                    </th>
+                                                                    <!-- <th class="text-center" scope="col">videos
+                                                                    </th> -->
+                                                                    <!-- <th class="text-center" scope="col">File
+                                                                    </th> -->
                                                                     <th class="text-center" scope="col">Controls
                                                                     </th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
-                                                                <tr>
-                                                                    <td class="text-center">1</td>
-                                                                    <td class="cell-ta">Chapter Content Title
+                                                                <tr *ngFor="let chapter of chapters; let index = index">
+                                                                    <td class="text-center">{{index + 1}}</td>
+                                                                    <td class="cell-ta">{{chapter.chapter_title}}
                                                                     </td>
-                                                                    <td class="text-center">2</td>
-                                                                    <td class="text-center">0</td>
+                                                                    <!-- <td class="text-center">{{chapter.num_of_video || 'null'}}</td> -->
+                                                                    <!-- <td class="text-center">0</td> -->
                                                                     <td class="text-center">
                                                                         <a href="#" title="Edit" class="gray-s"><i
                                                                                 class="uil uil-edit-alt"></i></a>
@@ -121,19 +121,7 @@
                                                                                 class="uil uil-trash-alt"></i></a>
                                                                     </td>
                                                                 </tr>
-                                                                <tr>
-                                                                    <td class="text-center">2</td>
-                                                                    <td class="cell-ta">Chapter Content Title
-                                                                    </td>
-                                                                    <td class="text-center">0</td>
-                                                                    <td class="text-center">3</td>
-                                                                    <td class="text-center">
-                                                                        <a href="#" title="Edit" class="gray-s"><i
-                                                                                class="uil uil-edit-alt"></i></a>
-                                                                        <a href="#" title="Delete" class="gray-s"><i
-                                                                                class="uil uil-trash-alt"></i></a>
-                                                                    </td>
-                                                                </tr>
+                                                              
                                                             </tbody>
                                                         </table>
                                                     </div>
