--- a/src/app/pages/user/cart/cart.component.html
+++ b/src/app/pages/user/cart/cart.component.html
@@ -1,5 +1,5 @@
 	<!-- Body Start -->
-	<div class="wrapper">
+	<!-- <div class="wrapper"> -->
 		<div class="sa4d25">
 			<div class="container-fluid">			
 				<div class="row">				
@@ -85,5 +85,5 @@
 			</div>
 		</div>
 	
-	</div>
+	<!-- </div> -->
 	<!-- Body End -->
