--- a/src/app/pages/user/checkout/checkout.component.html
+++ b/src/app/pages/user/checkout/checkout.component.html
@@ -1,5 +1,5 @@
 <!-- Body Start -->
-<div class="wrapper _bg4586 _new89">		
+<!-- <div class="wrapper _bg4586 _new89">		 -->
     <div class="_215b15">
         <div class="container">
             <div class="row">
@@ -138,5 +138,5 @@
         </div>
     </div>
 
-</div>
+<!-- </div> -->
 <!-- Body End -->
