--- a/src/app/pages/user/user-view-course/user-view-course.component.html
+++ b/src/app/pages/user/user-view-course/user-view-course.component.html
@@ -1,5 +1,5 @@
 <!-- Body Start -->
-<div class="wrapper _bg4586">
+<!-- <div class="wrapper _bg4586"> -->
     <div class="_215b01">
         <div class="container-fluid">			
             <div class="row">
@@ -216,5 +216,5 @@
         </div>
     </div>
    
-</div>
+<!-- </div> -->
 <!-- Body End -->
