--- a/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
+++ b/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
@@ -81,8 +81,10 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-md-12">
-                                            <button (click)="onSaveChapterClick()" class="part_btn_save prt-sv">Save
-                                                Chapter</button>
+                                            <button (click)="onSaveChapterClick()" class="part_btn_save prt-sv">
+                                               {{editMode? 'Save Chapter' : 'Create Chapter'}}</button>
+                                               <button *ngIf="editMode" (click)="onCancelEditChapterClick()" class="part_btn_save prt-sv">
+                                                cancel edit</button>
                                             <button (click)="getChaptersByInstructor()" class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                                 data-target="#chapter" aria-expanded="false" aria-controls="chapter">
                                                 View Saved Chapters
@@ -115,9 +117,9 @@
                                                                     <!-- <td class="text-center">{{chapter.num_of_video || 'null'}}</td> -->
                                                                     <!-- <td class="text-center">0</td> -->
                                                                     <td class="text-center">
-                                                                        <a href="#" title="Edit" class="gray-s"><i
+                                                                        <a (click)="onEditChapterClick(chapter)" title="Edit" class="gray-s"><i
                                                                                 class="uil uil-edit-alt"></i></a>
-                                                                        <a href="#" title="Delete" class="gray-s"><i
+                                                                        <a (click)="onDeleteChapterClick(chapter)" title="Delete" class="gray-s"><i
                                                                                 class="uil uil-trash-alt"></i></a>
                                                                     </td>
                                                                 </tr>
