--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -32,7 +32,7 @@
                 <a [routerLink]="['cart']" routerLinkActive="router-link-active"  class="option_links"><i class="uil uil-shopping-cart-alt"></i><span
                         class="noti_count">5</span></a>
             </li>
-            <li id="message-dropdown" class="ui">
+            <!-- <li id="message-dropdown" class="ui">
                 <a href="#" class="option_links"><i class='uil uil-envelope-alt'></i><span
                         class="noti_count">3</span></a>
                 <div class="menu drop-menu">
@@ -104,15 +104,15 @@
                     <a class="vbm_btn" href="instructor_notifications.html">View All <i
                             class='uil uil-arrow-right'></i></a>
                 </div>
-            </li>
+            </li> -->
             <li id="account-dropdown" class="ui">
                 <a  class="opts_account">
                     <img src="assets/images/hd_dp.jpg" alt="">
                 </a>
                 <div class="menu drop-menu">
-                    <!-- <div class="channel_my">
+                    <div class="channel_my">
                         <div class="profile_link">
-                            <img src="assets/images/hd_dp.jpg" alt="">
+                            <!-- <img src="assets/images/hd_dp.jpg" alt=""> -->
                             <div class="pd_content">
                                 <div class="rhte85">
                                     <h6>Joginder Singh</h6>
@@ -123,8 +123,8 @@
                                 <span>gambol943@gmail.com</span>
                             </div>
                         </div>
-                        <a href="my_instructor_profile_view.html" class="dp_link_12">View Instructor Profile</a>
-                    </div> -->
+                        <!-- <a href="my_instructor_profile_view.html" class="dp_link_12">View Instructor Profile</a> -->
+                    </div>
                     <!-- <div class="night_mode_switch__btn">
                         <a href="#" id="night-mode" class="btn-night-mode">
                             <i class="uil uil-moon"></i> Night mode
@@ -149,13 +149,13 @@
             <ul>
                 <li class="menu--item">
                     <a [routerLink]="['dashboard']" routerLinkActive="active"  class="menu--link" title="Dashboard">
-                        <i class="uil uil-apps menu--icon"></i>
+                        <i class='uil uil-home-alt menu--icon'></i>
                         <span class="menu--label">Dashboard</span>
                     </a>
                 </li>
                 <li class="menu--item">
                     <a [routerLink]="['courses']" routerLinkActive="active"  class="menu--link" title="Dashboard">
-                        <i class="uil uil-apps menu--icon"></i>
+                        <i class="uil uil-book-alt menu--icon"></i>
                         <span class="menu--label">All Courses</span>
                     </a>
                 </li>
