--- a/src/app/pages/instructor/components/sidebar/sidebar.component.html
+++ b/src/app/pages/instructor/components/sidebar/sidebar.component.html
@@ -65,7 +65,7 @@
                 <a href="#" class="option_links"><i class="uil uil-shopping-cart-alt"></i><span
                         class="noti_count">5</span></a>
             </li> -->
-            <li id="message-dropdown" class="ui">
+            <!-- <li id="message-dropdown" class="ui">
                 <a href="#" class="option_links"><i class='uil uil-envelope-alt'></i><span
                         class="noti_count">3</span></a>
                 <div class="menu drop-menu">
@@ -137,15 +137,15 @@
                     <a class="vbm_btn" href="instructor_notifications.html">View All <i
                             class='uil uil-arrow-right'></i></a>
                 </div>
-            </li>
+            </li> -->
             <li id="account-dropdown" class="ui">
-                <a  class="opts_account">
+                <a class="opts_account">
                     <img src="assets/images/hd_dp.jpg" alt="">
                 </a>
                 <div class="menu drop-menu">
-                    <!-- <div class="channel_my">
+                    <div class="channel_my">
                         <div class="profile_link">
-                            <img src="assets/images/hd_dp.jpg" alt="">
+                            <!-- <img src="assets/images/hd_dp.jpg" alt=""> -->
                             <div class="pd_content">
                                 <div class="rhte85">
                                     <h6>Joginder Singh</h6>
@@ -156,8 +156,8 @@
                                 <span>gambol943@gmail.com</span>
                             </div>
                         </div>
-                        <a href="my_instructor_profile_view.html" class="dp_link_12">View Instructor Profile</a>
-                    </div> -->
+                        <!-- <a href="my_instructor_profile_view.html" class="dp_link_12">View Instructor Profile</a> -->
+                    </div>
                     <!-- <div class="night_mode_switch__btn">
                         <a href="#" id="night-mode" class="btn-night-mode">
                             <i class="uil uil-moon"></i> Night mode
@@ -176,200 +176,47 @@
 </header>
 <!-- Header End -->
 <!-- Left Sidebar Start -->
+<!-- Left Sidebar Start -->
 <nav class="vertical_nav">
     <div class="left_section menu_left" id="js-menu">
         <div class="left_section">
             <ul>
                 <li class="menu--item">
-                    <a [routerLink]="['./dashboard']" routerLinkActive="active" replaceUrl="true" class="menu--link"
-                        title="Dashboard">
-                        <i class="uil uil-apps menu--icon"></i>
+                    <a [routerLink]="['./dashboard']" routerLinkActive="active" replaceUrl="true"
+                        class="menu--link active" title="Dashboard">
+                        <i class='uil uil-home-alt menu--icon'></i>
                         <span class="menu--label">Dashboard</span>
                     </a>
                 </li>
                 <li class="menu--item">
-                    <a [routerLink]="['courses']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Courses">
-                        <i class='uil uil-book-alt menu--icon'></i>
+                    <a [routerLink]="['courses']" routerLinkActive="active" class="menu--link" title="Courses">
+                        <i class="uil uil-book-alt menu--icon"></i>
                         <span class="menu--label">Courses</span>
                     </a>
                 </li>
                 <li class="menu--item  menu--item__has_sub_menu">
-                    <input type="checkbox" id="menu-collapse">
+                    <input type="checkbox" id="menu-collapse" class="menu-collapse">
                     <label class="menu--link" for="menu-collapse">
-                        <i class='uil uil-clipboard-alt menu--icon'></i>
-                        <span class="menu--label">Add New</span>
-                    </label>
-                    <ul class="sub_menu">
-                        <li class="menu--item">
-                            <a [routerLink]="['create/course']" routerLinkActive="active" replaceUrl="true"
-                                class="menu--link" title="Create Course">
-                                <i class='uil uil-plus-circle menu--icon'></i>
-                                <span class="menu--label">Add Course</span>
-
-                            </a>
-                        </li>
-                        <li class="menu--item">
-                            <a [routerLink]="['create/chapter']" routerLinkActive="active" replaceUrl="true"
-                                class="menu--link" title="Create Course">
-                                <i class='uil uil-plus-circle menu--icon'></i>
-                                <span class="menu--label">Add Chapter</span>
-
-                            </a>
-                        </li>
-                        <li class="menu--item">
-                            <a [routerLink]="['create/lecture']" routerLinkActive="active" replaceUrl="true"
-                                class="menu--link" title="Create Course">
-                                <i class='uil uil-plus-circle menu--icon'></i>
-                                <span class="menu--label">Add lecture</span>
-
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <!-- <li class="menu--item">
-                    <a href="saved_courses.html" class="menu--link" title="Saved Courses">
-                        <i class="uil uil-heart-alt menu--icon"></i>
-                        <span class="menu--label">Saved Courses</span>
-                    </a>
-                </li>
-                <li class="menu--item  menu--item__has_sub_menu">
-                    <label class="menu--link" title="Pages">
-                        <i class='uil uil-file menu--icon'></i>
-                        <span class="menu--label">Pages</span>
+                        <i class="uil uil-plus-circle menu--icon"></i>
+                        <span class="menu--label">Add New Course</span>
                     </label>
                     <ul class="sub_menu">
                         <li class="sub_menu--item">
-                            <a href="about_us.html" class="sub_menu--link">About</a>
+                            <a [routerLink]="['create/course']" routerLinkActive="active" class="sub_menu--link">Add
+                                Course</a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="sign_in.html" class="sub_menu--link">Sign In</a>
+                            <a [routerLink]="['create/chapter']" routerLinkActive="active" class="sub_menu--link">Add
+                                Chapter</a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="sign_up.html" class="sub_menu--link">Sign Up</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="sign_up_steps.html" class="sub_menu--link">Sign Up Steps</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="membership.html" class="sub_menu--link">Paid Membership</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="course_detail_view.html" class="sub_menu--link">Course Detail View</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="checkout_membership.html" class="sub_menu--link">Checkout</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="invoice.html" class="sub_menu--link">Invoice</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="career.html" class="sub_menu--link">Career</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="apply_job.html" class="sub_menu--link">Job Apply</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="our_blog.html" class="sub_menu--link">Our Blog</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="blog_single_view.html" class="sub_menu--link">Blog Detail View</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="company_details.html" class="sub_menu--link">Company Details</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="press.html" class="sub_menu--link">Press</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="live_output.html" class="sub_menu--link">Live Stream View</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="add_streaming.html" class="sub_menu--link">Add live Stream</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="search_result.html" class="sub_menu--link">Search Result</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="thank_you.html" class="sub_menu--link">Thank You</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="coming_soon.html" class="sub_menu--link">Coming Soon</a>
-                        </li>
-                        <li class="sub_menu--item">
-                            <a href="error_404.html" class="sub_menu--link">Error 404</a>
+                            <a [routerLink]="['create/lecture']" routerLinkActive="active" class="sub_menu--link">Add
+                                Lecture</a>
                         </li>
                     </ul>
-                </li> -->
-            </ul>
-        </div>
-        <!-- <div class="left_section">
-            <h6 class="left_title">SUBSCRIPTIONS</h6>
-            <ul>
-                <li class="menu--item">
-                    <a href="instructor_profile_view.html" class="menu--link user_img">
-                        <img src="images/left-imgs/img-1.jpg" alt="">
-                        Rock Smith
-                        <div class="alrt_dot"></div>
-                    </a>
-                </li>
-                <li class="menu--item">
-                    <a href="instructor_profile_view.html" class="menu--link user_img">
-                        <img src="images/left-imgs/img-2.jpg" alt="">
-                        Jassica William
-                    </a>
-                    <div class="alrt_dot"></div>
-                </li>
-                <li class="menu--item">
-                    <a href="all_instructor.html" class="menu--link" title="Browse Instructors">
-                        <i class='uil uil-plus-circle menu--icon'></i>
-                        <span class="menu--label">Browse Instructors</span>
-                    </a>
                 </li>
             </ul>
         </div>
-        <div class="left_section pt-2">
-            <ul>
-                <li class="menu--item">
-                    <a href="setting.html" class="menu--link" title="Setting">
-                        <i class='uil uil-cog menu--icon'></i>
-                        <span class="menu--label">Setting</span>
-                    </a>
-                </li>
-                <li class="menu--item">
-                    <a href="help.html" class="menu--link" title="Help">
-                        <i class='uil uil-question-circle menu--icon'></i>
-                        <span class="menu--label">Help</span>
-                    </a>
-                </li>
-                <li class="menu--item">
-                    <a href="report_history.html" class="menu--link" title="Report History">
-                        <i class='uil uil-windsock menu--icon'></i>
-                        <span class="menu--label">Report History</span>
-                    </a>
-                </li>
-                <li class="menu--item">
-                    <a href="feedback.html" class="menu--link" title="Send Feedback">
-                        <i class='uil uil-comment-alt-exclamation menu--icon'></i>
-                        <span class="menu--label">Send Feedback</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="left_footer">
-            <ul>
-                <li><a href="about_us.html">About</a></li>
-                <li><a href="press.html">Press</a></li>
-                <li><a href="contact_us.html">Contact Us</a></li>
-                <li><a href="coming_soon.html">Advertise</a></li>
-                <li><a href="coming_soon.html">Developers</a></li>
-                <li><a href="terms_of_use.html">Copyright</a></li>
-                <li><a href="terms_of_use.html">Privacy Policy</a></li>
-                <li><a href="terms_of_use.html">Terms</a></li>
-            </ul>
-            <div class="left_footer_content">
-                <p>© 2020 <strong>Cursus</strong>. All Rights Reserved.</p>
-            </div>
-        </div> -->
     </div>
 </nav>
 <!-- Left Sidebar End -->
