--- a/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
+++ b/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
@@ -1,115 +1,76 @@
-<!-- Body Start -->
-<div class="wrapper">
-    <div class="sa4d25">
-        <div class="container-fluid">			
-            <div class="row">
-                <div class="col-lg-12">	
-                    <h2 class="st_title"><i class="uil uil-apps"></i> Instructor Dashboard</h2>
-                </div>
-                <div class="col-xl col-lg-6 col-md-6">
-                    <div class="card_dash">
-                        <div class="card_dash_left">
-                            <h5>Total Courses</h5>
-                            <h2>130</h2>
-                            <span class="crdbg_3">New 5</span>
-                        </div>
-                        <div class="card_dash_right">
-                            <img src="assets/images/dashboard/online-course.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl col-lg-6 col-md-6">
-                    <div class="card_dash">
-                        <div class="card_dash_left">
-                            <h5>Active Course</h5>
-                            <h2>1500</h2>
-                            <span class="crdbg_2">New 125</span>
-                        </div>
-                        <div class="card_dash_right">
-                            <img src="assets/images/dashboard/active-course.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl col-lg-6 col-md-6">
-                    <div class="card_dash">
-                        <div class="card_dash_left">
-                            <h5>Pending Course</h5>
-                            <h2>500</h2>
-                            <span class="crdbg_2">New 125</span>
-                        </div>
-                        <div class="card_dash_right">
-                            <img src="assets/images/dashboard/pending.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl col-lg-6 col-md-6">
-                    <div class="card_dash">
-                        <div class="card_dash_left">
-                            <h5>Total Sales</h5>
-                            <h2>$350</h2>
-                            <span class="crdbg_1">New $50</span>
-                        </div>
-                        <div class="card_dash_right">
-                            <img src="assets/images/dashboard/achievement.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-                
-                
-                <div class="col-xl-2 col-lg-6 col-md-6">
-                    <div class="card_dash">
-                        <div class="card_dash_left">
-                            <h5>Total Students</h5>
-                            <h2>2650</h2>
-                            <span class="crdbg_4">New 245</span>
-                        </div>
-                        <div class="card_dash_right">
-                            <img src="assets/images/dashboard/knowledge.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-                                
-            </div>
-            
-        </div>
-    </div>
-    <!-- <footer class="footer mt-40">
-        <div class="container-fluid">
-            <div class="row">					
-                <div class="col-lg-12">
-                    <div class="item_f1">
-                        <a href="terms_of_use.html">Copyright Policy</a>
-                        <a href="terms_of_use.html">Terms</a>
-                        <a href="terms_of_use.html">Privacy Policy</a>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="footer_bottm">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <ul class="fotb_left">
-                                    
-                                    <li>
-                                        <p>© 2020 <strong>Smart Academy</strong>. All Rights Reserved.</p>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="edu_social_links">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                    <a href="#"><i class="fab fa-youtube"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer> -->
-</div>
-<!-- Body End -->
+	<!-- Body Start -->
+	<div class="wrapper">
+		<div class="sa4d25">
+			<div class="container-fluid">			
+				<div class="row">
+					<div class="col-lg-12">	
+						<h2 class="st_title"><i class="uil uil-apps"></i> Instructor Dashboard</h2>
+					</div>
+					<div class="col col-md-6 col-lg-6 col-xl-4">
+						<div class="card_dash">
+							<div class="card_dash_left">
+								<h5>Total Courses</h5>
+								<h2>130</h2>
+								<span class="crdbg_3">New 5</span>
+							</div>
+							<div class="card_dash_right">
+								<img src="assets/images/dashboard/online-course.svg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="col col-md-6 col-lg-6 col-xl-4">
+						<div class="card_dash">
+							<div class="card_dash_left">
+								<h5>Total Sales</h5>
+								<h2>$350</h2>
+								<span class="crdbg_1">New 50</span>
+							</div>
+							<div class="card_dash_right">
+								<img src="assets/images/dashboard/achievement.svg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="col col-md-6 col-lg-6 col-xl-4">
+						<div class="card_dash">
+							<div class="card_dash_left">
+								<h5>Total Students</h5>
+								<h2>2650</h2>
+								<span class="crdbg_4">New 245</span>
+							</div>
+							<div class="card_dash_right">
+								<img src="assets/images/dashboard/knowledge.svg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="col col-md-6 col-lg-6 col-xl-6">
+						<div class="card_dash">
+							<div class="card_dash_left">
+								<h5>Active Course</h5>
+								<h2>1500</h2>
+								<span class="crdbg_2">New 125</span>
+							</div>
+							<div class="card_dash_right">
+								<img src="assets/images/dashboard/active-course.svg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="col col-md-6 col-lg-6 col-xl-6">
+						<div class="card_dash">
+							<div class="card_dash_left">
+								<h5>Pending Course</h5>
+								<h2>500</h2>
+								<span class="crdbg_2">New 125</span>
+							</div>
+							<div class="card_dash_right">
+								<img src="assets/images/dashboard/pending.svg" alt="">
+							</div>
+						</div>
+					</div>
+									
+				</div>
+				
+			</div>
+		</div>
+	
+	</div>
+	<!-- Body End -->
