--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -28,133 +28,141 @@
             </div>				
         </div>
         <div class="section3125 mt-30">
-            <h4 class="item_title">{{ 'Newest Courses' | translate}}</h4>
-            <a href="#" class="see150">{{ 'See all ' | translate}}</a>
-            <div class="la5lo1">
-                <div class="owl-carousel featured_courses owl-theme">
-                    <div class="item">
-                        <div class="fcrse_1 mb-20">
-                            <a [routerLink]="['/user/viewCourse/12345']"  class="fcrse_img">
-                                <img src="assets/images/courses/img-14.jpg" alt="">
-                                <div class="course-overlay">
-                                    <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                    <div class="crse_timer">
-                                        12 {{ 'hours' | translate }}
-                                    </div>
+					
+            <div class="row">
+                <div class="col-12">
+                    <h4 class="item_title">{{'Newest Courses' | translate}}</h4>
+                    <a href="#" class="see150">{{'See all' | translate}}</a>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                    <div class="fcrse_1 mb-20">
+                        <a href="course_detail_view.html" class="fcrse_img">
+                            <img src="assets/images/courses/img-14.jpg" alt="">
+                            <div class="course-overlay">
+                                <span class="play_btn1"><i class="uil uil-play"></i></span>
+                                <div class="crse_timer">
+                                   12 {{ 'hours' | translate}}
                                 </div>
-                            </a>
-                            <div class="fcrse_content">
-                                <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3</a>
-                                <a href="#" class="crse-cate">English</a>
-                                <div class="auth1lnkprce">
-                                    <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
+                            </div>
+                        </a>
+                        <div class="fcrse_content">
+                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a href="#" class="crse-cate">English</a>
+                            <div class="auth1lnkprce">
+                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <div class="prce142">$4 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="item">
-                        <div class="fcrse_1 mb-20">
-                            <a [routerLink]="['/user/viewCourse/12345']"  class="fcrse_img">
-                                <img src="assets/images/courses/img-14.jpg" alt="">
-                                <div class="course-overlay">
-                                    <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                    <div class="crse_timer">
-                                        12 {{ 'hours' | translate }}
-                                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                    <div class="fcrse_1 mb-20">
+                        <a href="course_detail_view.html" class="fcrse_img">
+                            <img src="assets/images/courses/img-14.jpg" alt="">
+                            <div class="course-overlay">
+                                <span class="play_btn1"><i class="uil uil-play"></i></span>
+                                <div class="crse_timer">
+                                   12 {{ 'hours' | translate}}
                                 </div>
-                            </a>
-                            <div class="fcrse_content">
-                                <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3</a>
-                                <a href="#" class="crse-cate">English</a>
-                                <div class="auth1lnkprce">
-                                    <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
+                            </div>
+                        </a>
+                        <div class="fcrse_content">
+                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a href="#" class="crse-cate">English</a>
+                            <div class="auth1lnkprce">
+                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <div class="prce142">$4 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="item">
-                        <div class="fcrse_1 mb-20">
-                            <a [routerLink]="['/user/viewCourse/12345']"  class="fcrse_img">
-                                <img src="assets/images/courses/img-14.jpg" alt="">
-                                <div class="course-overlay">
-                                    <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                    <div class="crse_timer">
-                                        12 {{ 'hours' | translate }}
-                                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                    <div class="fcrse_1 mb-20">
+                        <a href="course_detail_view.html" class="fcrse_img">
+                            <img src="assets/images/courses/img-14.jpg" alt="">
+                            <div class="course-overlay">
+                                <span class="play_btn1"><i class="uil uil-play"></i></span>
+                                <div class="crse_timer">
+                                   12 {{ 'hours' | translate}}
                                 </div>
-                            </a>
-                            <div class="fcrse_content">
-                                <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3</a>
-                                <a href="#" class="crse-cate">English</a>
-                                <div class="auth1lnkprce">
-                                    <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
+                            </div>
+                        </a>
+                        <div class="fcrse_content">
+                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a href="#" class="crse-cate">English</a>
+                            <div class="auth1lnkprce">
+                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <div class="prce142">$4 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="item">
-                        <div class="fcrse_1 mb-20">
-                            <a [routerLink]="['/user/viewCourse/12345']"  class="fcrse_img">
-                                <img src="assets/images/courses/img-14.jpg" alt="">
-                                <div class="course-overlay">
-                                    <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                    <div class="crse_timer">
-                                        12 {{ 'hours' | translate }}
-                                    </div>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-12">
+                    <h4 class="item_title">{{'Another Courses' | translate}}</h4>
+                    <a href="#" class="see150">{{'See all' | translate}}</a>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                    <div class="fcrse_1 mb-20">
+                        <a href="course_detail_view.html" class="fcrse_img">
+                            <img src="assets/images/courses/img-14.jpg" alt="">
+                            <div class="course-overlay">
+                                <span class="play_btn1"><i class="uil uil-play"></i></span>
+                                <div class="crse_timer">
+                                   12 {{ 'hours' | translate}}
                                 </div>
-                            </a>
-                            <div class="fcrse_content">
-                                <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3</a>
-                                <a href="#" class="crse-cate">English</a>
-                                <div class="auth1lnkprce">
-                                    <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
+                            </div>
+                        </a>
+                        <div class="fcrse_content">
+                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a href="#" class="crse-cate">English</a>
+                            <div class="auth1lnkprce">
+                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <div class="prce142">$4 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="item">
-                        <div class="fcrse_1 mb-20">
-                            <a [routerLink]="['/user/viewCourse/12345']"  class="fcrse_img">
-                                <img src="assets/images/courses/img-14.jpg" alt="">
-                                <div class="course-overlay">
-                                    <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                    <div class="crse_timer">
-                                        12 {{ 'hours' | translate }}
-                                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                    <div class="fcrse_1 mb-20">
+                        <a href="course_detail_view.html" class="fcrse_img">
+                            <img src="assets/images/courses/img-14.jpg" alt="">
+                            <div class="course-overlay">
+                                <span class="play_btn1"><i class="uil uil-play"></i></span>
+                                <div class="crse_timer">
+                                   12 {{ 'hours' | translate}}
                                 </div>
-                            </a>
-                            <div class="fcrse_content">
-                                <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3</a>
-                                <a href="#" class="crse-cate">English</a>
-                                <div class="auth1lnkprce">
-                                    <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
+                            </div>
+                        </a>
+                        <div class="fcrse_content">
+                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a href="#" class="crse-cate">English</a>
+                            <div class="auth1lnkprce">
+                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <div class="prce142">$4 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="item">
-                        <div class="fcrse_1 mb-20">
-                            <a [routerLink]="['/user/viewCourse/12345']"  class="fcrse_img">
-                                <img src="assets/images/courses/img-14.jpg" alt="">
-                                <div class="course-overlay">
-                                    <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                    <div class="crse_timer">
-                                        12 {{ 'hours' | translate }}
-                                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                    <div class="fcrse_1 mb-20">
+                        <a href="course_detail_view.html" class="fcrse_img">
+                            <img src="assets/images/courses/img-14.jpg" alt="">
+                            <div class="course-overlay">
+                                <span class="play_btn1"><i class="uil uil-play"></i></span>
+                                <div class="crse_timer">
+                                   12 {{ 'hours' | translate}}
                                 </div>
-                            </a>
-                            <div class="fcrse_content">
-                                <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3</a>
-                                <a href="#" class="crse-cate">English</a>
-                                <div class="auth1lnkprce">
-                                    <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
+                            </div>
+                        </a>
+                        <div class="fcrse_content">
+                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a href="#" class="crse-cate">English</a>
+                            <div class="auth1lnkprce">
+                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <div class="prce142">$4 </div>
                             </div>
                         </div>
                     </div>
