new ui, handle auth, protect routes

--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -4,8 +4,8 @@
 		<div class="row justify-content-lg-center justify-content-md-center">
 			<div class="col-lg-12">
 				<div class="main_logo25" id="logo">
-					<a href="index.html"><img src="images/logo.png" alt=""></a>
-					<a href="index.html"><img class="logo-inverse" src="images/ct_logo.svg" alt=""></a>
+					<a [routerLink]="['']"><img src="assets/images/logo.png" alt=""></a>
+					<a [routerLink]="['']"><img class="logo-inverse" src="assets/images/ct_logo.svg" alt=""></a>
 				</div>
 			</div>
 
@@ -83,9 +83,9 @@
 						<button class="login-btn" (click)="onSignUpClick($event)">sign Up</button>
 						<ngx-loading [show]="loading"></ngx-loading>
 					</form>
-					<p class="sgntrm145">By signing up, you agree to our <a href="terms_of_use.html">Terms of Use</a>
-						and <a href="terms_of_use.html">Privacy Policy</a>.</p>
-					<p class="mb-0 mt-30">Already have an account? <a href="sign_in.html">Log In</a></p>
+					<p class="sgntrm145">By signing up, you agree to our <a >Terms of Use</a>
+						and <a >Privacy Policy</a>.</p>
+					<p class="mb-0 mt-30">Already have an account? <a [routerLink]="['/login']" routerLinkActive="router-link-active" >Log In</a></p>
 				</div>
 				<div class="sign_footer"><img src="images/sign_logo.png" alt="">© 2020 <strong>Cursus</strong>. All
 					Rights Reserved.</div>
