cart, ciew course user

--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -30,7 +30,7 @@
         <ul>
             <li class="ui">
                 <a [routerLink]="['cart']" routerLinkActive="router-link-active"  class="option_links"><i class="uil uil-shopping-cart-alt"></i><span
-                        class="noti_count">5</span></a>
+                        class="noti_count">{{cart.cart.length}}</span></a>
             </li>
             <!-- <li id="message-dropdown" class="ui">
                 <a href="#" class="option_links"><i class='uil uil-envelope-alt'></i><span
