--- a/src/app/pages/user/user-all-courses/user-all-courses.component.html
+++ b/src/app/pages/user/user-all-courses/user-all-courses.component.html
@@ -6,118 +6,42 @@
             </div>
         </div>
         <div class="section3125 mt-30">
-            <div class="row">
+            <div class="row" infiniteScroll [infiniteScrollDistance]="1" (scrolled)="onScroll()"
+                [infiniteScrollDisabled]="lastPage">
 
-                <div class="col-xl-3 col-lg-6 col-md-6">
+
+
+                <div *ngFor="let course of approvedCoursesArray"  class="col-xl-3 col-lg-6 col-md-6">
                     <div class="fcrse_1 mb-20">
-                        <a [routerLink]="['/user/viewCourse/12345']" routerLinkActive="router-link-active"  class="fcrse_img">
+                        <a [routerLink]="['/user/viewCourse/',course.id]" routerLinkActive="router-link-active"
+                            class="fcrse_img">
                             <img src="assets/images/courses/img-14.jpg" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                <div class="crse_timer">
+                                <!-- <div class="crse_timer">
                                     12 {{ 'hours' | translate}}
-                                </div>
+                                </div> -->
                             </div>
                         </a>
                         <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3
-                        </a>
-                        <a href="#" class="crse-cate">English</a>
-                        <div class="auth1lnkprce">
-                            <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
+                            <a href="course_detail_view.html" class="crse14s">{{course.course_title}}
+                            </a>
+                            <a class="crse-cate" *ngIf="course.language === '1'">Arabic</a>
+                            <a class="crse-cate" *ngIf="course.language === '2'">English</a>
+                            <div class="auth1lnkprce">
+                                <p class="cr1fot">{{ 'By' | translate}} <a >{{course.first_name}}</a></p>
+                                <!-- <div class="prce142">$4</div> -->
                             </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-lg-6 col-md-6">
-                    <div class="fcrse_1 mb-20">
-                        <a [routerLink]="['/user/viewCourse/12345']" routerLinkActive="router-link-active"  class="fcrse_img">
-                            <img src="assets/images/courses/img-14.jpg" alt="">
-                            <div class="course-overlay">
-                                <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                <div class="crse_timer">
-                                    12 {{ 'hours' | translate}}
-                                </div>
-                            </div>
-                        </a>
-                        <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3
-                        </a>
-                        <a href="#" class="crse-cate">English</a>
-                        <div class="auth1lnkprce">
-                            <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
-                            </div>
-                    </div>
-                </div>  <div class="col-xl-3 col-lg-6 col-md-6">
-                    <div class="fcrse_1 mb-20">
-                        <a [routerLink]="['/user/viewCourse/12345']" routerLinkActive="router-link-active"  class="fcrse_img">
-                            <img src="assets/images/courses/img-14.jpg" alt="">
-                            <div class="course-overlay">
-                                <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                <div class="crse_timer">
-                                    12 {{ 'hours' | translate}}
-                                </div>
-                            </div>
-                        </a>
-                        <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3
-                        </a>
-                        <a href="#" class="crse-cate">English</a>
-                        <div class="auth1lnkprce">
-                            <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
-                            </div>
-                    </div>
-                </div>  <div class="col-xl-3 col-lg-6 col-md-6">
-                    <div class="fcrse_1 mb-20">
-                        <a [routerLink]="['/user/viewCourse/12345']" routerLinkActive="router-link-active"  class="fcrse_img">
-                            <img src="assets/images/courses/img-14.jpg" alt="">
-                            <div class="course-overlay">
-                                <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                <div class="crse_timer">
-                                    12 {{ 'hours' | translate}}
-                                </div>
-                            </div>
-                        </a>
-                        <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3
-                        </a>
-                        <a href="#" class="crse-cate">English</a>
-                        <div class="auth1lnkprce">
-                            <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
-                            </div>
-                    </div>
-                </div>  <div class="col-xl-3 col-lg-6 col-md-6">
-                    <div class="fcrse_1 mb-20">
-                        <a [routerLink]="['/user/viewCourse/12345']" routerLinkActive="router-link-active"  class="fcrse_img">
-                            <img src="assets/images/courses/img-14.jpg" alt="">
-                            <div class="course-overlay">
-                                <span class="play_btn1"><i class="uil uil-play"></i></span>
-                                <div class="crse_timer">
-                                    12 {{ 'hours' | translate}}
-                                </div>
-                            </div>
-                        </a>
-                        <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3
-                        </a>
-                        <a href="#" class="crse-cate">English</a>
-                        <div class="auth1lnkprce">
-                            <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
-                                    <div class="prce142">$4</div>
-                                </div>
-                            </div>
-                    </div>
-                </div>
 
-                <div class="col-md-12">
+
+
+
+
+                <div *ngIf="loading" class="col-md-12">
                     <div class="main-loader mt-20">
                         <div class="spinner">
                             <div class="bounce1"></div>
