--- a/src/app/pages/user/cart/cart.component.html
+++ b/src/app/pages/user/cart/cart.component.html
@@ -1,89 +1,76 @@
-	<!-- Body Start -->
-	<!-- <div class="wrapper"> -->
-		<div class="sa4d25">
-			<div class="container-fluid">			
-				<div class="row">				
-					<div class="col-lg-6 offset-xl-2">
-						<div class="_14d25 mb-20">						
-							<div class="row">
-								<div class="col-md-12">
-									<div class="grp_titles pt-0">
-										<div class="ht_title">{{'Shopping cart' | translate}}</div>
-										<a href="#" class="ht_clr">{{'Remove All' | translate}}</a>
-									</div>
-									<div class="fcrse_1">
-										<a href="course_detail_view.html" class="hf_img">
-											<img src="assets/images/courses/img-1.jpg" alt="">
-											<div class="course-overlay">
-												<span class="play_btn1"><i class="uil uil-play"></i></span>
-												<div class="crse_timer">
-                                                    25 	{{'hours' | translate}}
-												</div>
-											</div>
-										</a>
-										<div class="hs_content">
-											<div class="eps_dots eps_dots10 more_dropdown">
-												<a href="#"><i class="uil uil-trash-alt"></i></a>
-											</div>
-											<a href="#" class="crse-cate">Course Name</a>
-											<a href="course_detail_view.html" class="crse14s title900">{{'Chapter Name' | translate}}</a>
-											<a href="#" class="crse-cate">English / 8 Lectures</a>
-											<div class="auth1lnkprce">
-												<p class="cr1fot">{{'By' | translate}}<a href="#">John Doe</a></p>
-												<div class="prce142">120 {{'EGP' | translate}}</div>
-											</div>
+<!-- Body Start -->
+<!-- <div class="wrapper"> -->
+<div class="sa4d25">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-lg-6 offset-xl-2">
+				<div class="_14d25 mb-20">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="grp_titles pt-0">
+								<div class="ht_title">{{'Shopping cart' | translate}}</div>
+								<a *ngIf="cart.cart.length > 0" (click)="removeAll()"
+									class="ht_clr">{{'Remove All' | translate}}</a>
+							</div>
+							<div *ngFor="let chapter of cart.cart" class="fcrse_1">
+								<!-- <a href="course_detail_view.html" class="hf_img">
+									<img src="assets/images/courses/img-1.jpg" alt="">
+									<div class="course-overlay">
+										<span class="play_btn1"><i class="uil uil-play"></i></span>
+										<div class="crse_timer">
+											25 {{'hours' | translate}}
 										</div>
 									</div>
-                                    <div class="fcrse_1">
-										<a href="course_detail_view.html" class="hf_img">
-											<img src="assets/images/courses/img-1.jpg" alt="">
-											<div class="course-overlay">
-												<span class="play_btn1"><i class="uil uil-play"></i></span>
-												<div class="crse_timer">
-                                                    25 	{{'hours' | translate}}
-												</div>
-											</div>
-										</a>
-										<div class="hs_content">
-											<div class="eps_dots eps_dots10 more_dropdown">
-												<a href="#"><i class="uil uil-trash-alt"></i></a>
-											</div>
-											<a href="#" class="crse-cate">Course Name</a>
-											<a href="course_detail_view.html" class="crse14s title900">{{'Chapter Name' | translate}}</a>
-											<a href="#" class="crse-cate">English / 8 Lectures</a>
-											<div class="auth1lnkprce">
-												<p class="cr1fot">{{'By' | translate}}<a href="#">John Doe</a></p>
-												<div class="prce142">120 {{'EGP' | translate}}</div>
-											</div>
-										</div>
+								</a> -->
+								<div class="hs_content">
+									<div class="eps_dots eps_dots10 more_dropdown">
+										<a (click)="removeChapter(chapter)"><i class="uil uil-trash-alt"></i></a>
 									</div>
-								</div>									
-							</div>																		
-						</div>								
-					</div>	
-					<div class="col-lg-5 col-xl-3 mt-lg-5">
-						<div class="membership_chk_bg rght1528 mt-lg-3">
-								<div class="checkout_title">
-									<h4>{{'Order Summary' | translate}}</h4>
-									<img src="assets/images/line.svg" alt="">
+									<a class="crse-cate">{{chapter.course_title}}</a>
+									<a class="crse14s title900">{{chapter.chapter_title}}</a>
+									<a *ngIf="chapter.subjectId === 1" class="crse-cate">Physics / {{chapter.chapter_num_of_video}} {{'lecture' | translate}}</a>
+									<a *ngIf="chapter.subjectId === 2" class="crse-cate">Math / {{chapter.chapter_num_of_video}} {{'lecture' | translate}}</a>
+									<a *ngIf="chapter.subjectId === 3" class="crse-cate">Science / {{chapter.chapter_num_of_video}} {{'lecture' | translate}}</a>
+									<div class="auth1lnkprce">
+										<!-- <p class="cr1fot">{{'By' | translate}}<a href="#">John Doe</a></p> -->
+										<div class="prce142">{{chapter.chapter_fee}} {{'EGP' | translate}}</div>
+									</div>
 								</div>
-								<div class="order_dt_section">
-									<div class="order_title">
-										<h4>{{'Total Chapters' | translate}}</h4>
-										<div class="order_price">4 </div>
-									</div>
-									<div class="order_title">
-										<h2>{{'Total Cost' | translate}}</h2>
-										<div class="order_price5">200 {{ 'EGP'| translate}}</div>
-									</div>
-									<div class="scr_text"><i class="uil uil-lock-alt"></i>{{'Secure checkout' | translate}}</div>
-								</div>	
-							
+							</div>
+
 						</div>
-					</div>			
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-5 col-xl-3 mt-lg-5">
+				<div class="membership_chk_bg rght1528 mt-lg-3">
+					<div class="checkout_title">
+						<h4>{{'Order Summary' | translate}}</h4>
+						<img src="assets/images/line.svg" alt="">
+					</div>
+					<div class="order_dt_section">
+						<div class="order_title">
+							<h4>{{'Total Chapters' | translate}}</h4>
+							<div class="order_price">{{cart.cart.length}}</div>
+						</div>
+						<div class="order_title">
+							<h2>{{'Total Cost' | translate}}</h2>
+							<div class="order_price5">{{cart.getCartTotalPrice()}} {{ 'EGP'| translate}}</div>
+							<div class="scr_text"><button [disabled]="!cart.cart.length"
+									[routerLink]="['/user/checkout']" routerLinkActive="router-link-active"
+									[ngStyle]="{'background-color':!cart.cart.length ? 'darkgray' : null}"
+									class="live_link">Check Out</button></div>
+
+						</div>
+						<div class="scr_text"><i class="uil uil-lock-alt"></i>{{'Secure checkout' | translate}}</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
-	
-	<!-- </div> -->
-	<!-- Body End -->
+	</div>
+</div>
+
+<!-- </div> -->
+<!-- Body End -->
+<ngx-confirm-box bgColor="rgba(0,0,0,0.5)" confirmContent= "" confirmHeading="{{'Are You Sure?' | translate}}" confirmCanceltext="{{'Cancel' | translate}}"  confirmOkaytext = "{{'Confirm' | translate}}" (confirmEvt)="confirmChange($event)"></ngx-confirm-box>
