--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -115,12 +115,12 @@
                             <!-- <img src="assets/images/hd_dp.jpg" alt=""> -->
                             <div class="pd_content">
                                 <div class="rhte85">
-                                    <h6>Joginder Singh</h6>
+                                    <h6>{{getName() || ""}}</h6>
                                     <div class="mef78" title="Verify">
                                         <i class='uil uil-check-circle'></i>
                                     </div>
                                 </div>
-                                <span>gambol943@gmail.com</span>
+                                <span>{{getEmail() || ""}}</span>
                             </div>
                         </div>
                         <!-- <a href="my_instructor_profile_view.html" class="dp_link_12">View Instructor Profile</a> -->
